--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ This file documents the revision history for Perl extension Mango.
 0.01000_03
     - Updated/reviewed all pod
     - Changed throwing exceptions away from indirect syntax
+    - Added Mango::Object::Meta to store non-column information
 
 0.01000_02 Web Apr 18 22:06:43 2007
     - Make prereqs for DBIC/Handel real versions
